fix: Use proper format for superindex (footnotes)
This has been broken in the Slate Jekyll theme for a long time.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -231,3 +231,7 @@ td {
   display: block;
   border-bottom: 1px solid gray
 }
+sup {
+    font-size: 75%;
+    vertical-align: super;
+}
